Updated my homepage info in the composer.json

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 		{
 			"name": "Ryan Tablada",
 			"email": "ryan.tablada@gmail.com",
-			"homepage": "lucidbridge.com",
+			"homepage": "http://lucidbridge.com",
 			"role": "Developer"
 		}
 	],
